--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,9 @@
 - link:
     ~/.bashrc: bashrc
     ~/.config: config
+    /bin/dwm-startup: dwm-startup
     ~/.gitconfig: gitconfig
+    ~/.local/share/dwm: local/share/dwm
     ~/polybar.sh: polybar.sh
     ~/.xinitrc: xinitrc
     ~/.zshrc: zshrc
