--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 
 [submodule "config/polybar-scripts"]
 	path = config/polybar-scripts
-	url = git@github.com:polybar/polybar-scripts.git
+	url = https://github.com/polybar/polybar-scripts.git
 	ignore = dirty
