Add the config to support the dynamic width

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -21,7 +21,7 @@ override-redirect=false
 padding = 0
 radius = 3
 tray-position = right
-width=3432
+width=${env:WIDTH:}
 height=24
 offset-x = 4
 offset-y = 4n
