--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -82,6 +82,31 @@ shadow-exclude = [
 
 
 #################################
+#             Corners           #
+#################################
+# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
+corner-radius = 8.0;
+#rounded-corners-exclude = [
+  #"window_type = 'normal'",
+#  "class_g = 'awesome'",
+#  "class_g = 'dmenu'",
+#  "class_g = 'dwm'",
+#  "class_g = 'URxvt'",
+#  "class_g = 'XTerm'",
+#  "class_g = 'kitty'",
+#  "class_g = 'Alacritty'",
+#  "class_g = 'Polybar'",
+#  "class_g = 'code-oss'",
+#  "class_g = 'xmobar'",
+#  "class_g = 'firefox'",
+#  "class_g = 'Thunderbird'"
+#];
+round-borders = 1;
+#round-borders-exclude = [
+#  "class_g = 'xmobar'",
+#];
+
+#################################
 #           Fading              #
 #################################
 
@@ -89,7 +114,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true
+fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -106,10 +131,10 @@ fade-out-step = 0.03;
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+# no-fading-openclose = true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
+# no-fading-destroyed-argb = true
 
 
 #################################
@@ -161,8 +186,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
-# blur-size = 12
+blur-method = "kernel"
+#blur-size = 12
 #
 # blur-deviation = false
 
@@ -170,7 +195,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -186,10 +211,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Specify the blur convolution kernel, with the following format:
 # example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#blur-kern = "5,5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-blur-kern = "3x3box";
+blur-kern = "5x5box";
 
 
 # Exclude conditions for background blur.
@@ -209,9 +234,9 @@ blur-background-exclude = [
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
-#
-# backend = 'glx'
-backend = "xrender";
+
+backend = "glx";
+#backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
