Change to a nord theme

--- a/config/VSCodium/User/settings.json
+++ b/config/VSCodium/User/settings.json
@@ -3,10 +3,12 @@
     "sync.autoUpload": true,
     "sync.forceUpload": true,
     "files.autoSave": "onFocusChange",
-    "editor.fontFamily": "\"mononoki Nerd Font Mono\", 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "\"JetBrains Mono\",\"mononoki Nerd Font Mono\", 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "explorer.confirmDelete": false,
     "window.titleBarStyle": "custom",
     "git.autofetch": true,
     "clangd.path": "/home/gwagner/.config/VSCodium/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/12.0.0/clangd_12.0.0/bin/clangd",
-    "git.confirmSync": false
+    "git.confirmSync": false,
+    "workbench.colorTheme": "Nord",
+    "terminal.integrated.fontFamily": "monospace"
 }
