--- a/config/solaar/config.json
+++ b/config/solaar/config.json
@@ -26,7 +26,7 @@
       "93": 93
     }
   },
-  "4086:6C4A9A21": {
+  "4086:3B577BF0": {
     "_modelId": "4086C0900000",
     "_name": "G703 LIGHTSPEED Wireless Gaming Mouse w/ HERO",
     "_sensitive": {
@@ -43,6 +43,8 @@
     "_name": "MX Keys Keyboard",
     "_sensitive": {
       "backlight": true,
+      "divert-keys": true,
+      "fn-swap": false,
       "multiplatform": true
     },
     "_serial": "7976FA42",
@@ -80,7 +82,7 @@
       "236": 0
     },
     "fn-swap": false,
-    "multiplatform": 1
+    "multiplatform": "0"
   },
   "_version": "1.0.7"
 }
