--- a/config/systemd/user/scream.service
+++ b/config/systemd/user/scream.service
@@ -1,14 +1,12 @@
 [Unit]
-Description=Noisetorch Noise Cancelling
+Description=Scream audio server
 After=pipewire.service
 After=pipewire-pulse.service
 After=pipewire-media-session.service
 
 [Service]
 Type=simple
-RemainAfterExit=yes
 ExecStart=/bin/scream -m /dev/shm/scream-ivshmem
-
 
 [Install]
 WantedBy=default.target
