--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+.idea
+
 config/autostart/teams.desktop
 config/bashtop/error.log
 config/coc/extensions/**
 config/dconf
 config/discord
 config/Electron
+config/JetBrains
 config/Slack
 config/Microsoft/
 config/Microsoft*
