--- a/looking-glass-client.ini
+++ b/looking-glass-client.ini
@@ -3,7 +3,10 @@ noScreensaver=yes
 size=3400x1380
 quickSplash=yes
 borderless=yes
+showFPS=yes
 
 [input]
+grabKeyboardOnFocus=yes
 rawMouse=yes
 mouseSens=5
+
