add scratchpad for terminal

--- a/config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -5,8 +5,8 @@ OpenStatsOnStartup=false
 [Video]
 BaseCX=1920
 BaseCY=1080
-OutputCX=1280
-OutputCY=720
+OutputCX=1920
+OutputCY=1080
 FPSType=0
 FPSCommon=60
 
@@ -47,5 +47,5 @@ RecRescaleRes=1920x1080
 FFRescaleRes=1920x1080
 
 [Audio]
-MonitoringDeviceName=Default
-MonitoringDeviceId=default
+MonitoringDeviceName=Monitor of obs-monitor Audio/Sink sink
+MonitoringDeviceId=obs-monitor.monitor
