--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -93,6 +93,8 @@ window:
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
 
+  opacity: .95
+
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
@@ -269,7 +271,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: .95
+#background_opacity: .95
 
 #selection:
   # This string contains all characters that are used as separators for
