--- a/config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -5,10 +5,11 @@ OpenStatsOnStartup=false
 [Video]
 BaseCX=1920
 BaseCY=1080
-OutputCX=1920
-OutputCY=1080
+OutputCX=1280
+OutputCY=720
 FPSType=0
-FPSCommon=60
+FPSCommon=30
+ScaleType=bilinear
 
 [Panels]
 CookieId=60579880DBE372EC
