--- a/config/obs-studio/plugin_config/rtmp-services/package.json
+++ b/config/obs-studio/plugin_config/rtmp-services/package.json
@@ -1,1 +1,1 @@
-{"url":"https://obsproject.com/obs2_update/rtmp-services","version":188,"files":[{"name":"services.json","version":188}]}
+{"$schema":"schema/package-schema.json","url":"https://obsproject.com/obs2_update/rtmp-services/v4","version":227,"files":[{"name":"services.json","version":227}]}
