--- a/config/gtk-2.0/gtkfilechooser.ini
+++ b/config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=path-bar
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=0
-GeometryY=0
+GeometryX=625
+GeometryY=365
 GeometryWidth=1008
 GeometryHeight=746
 SortColumn=name
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
