--- a/config/nitrogen/bg-saved.cfg
+++ b/config/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/gwagner/wallpapers/./IMG_4746.jpg
-mode=0
+file=/home/gwagner/backgrounds/framework-exploded.jpg
+mode=5
 bgcolor=#000000
