--- a/config/VSCodium/User/settings.json
+++ b/config/VSCodium/User/settings.json
@@ -43,5 +43,6 @@
     ],
     "markdown.editor.quickSuggestions": true,
     "liveServer.settings.donotShowInfoMsg": true,
-    "files.autoSaveDelay": 2000
+    "files.autoSaveDelay": 2000,
+    "window.zoomLevel": 3
 }
