--- a/config/nitrogen/nitrogen.cfg
+++ b/config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=2408
-posy=32
-sizex=1025
-sizey=1402
+posx=4
+posy=4
+sizex=1343
+sizey=1464
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=
+dirs=/home/gwagner/backgrounds;
