--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,11 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# nvim requirement
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -sa terminal-features ',xterm-256color:RGB'
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
