Updates to configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,3 +14,14 @@ bind r source-file ~/.tmux.conf
 # Setup vi style copy paste
 set -s set-clipboard external
 setw -g mode-keys vi
+
+unbind '"'
+bind \\ split-window -h
+
+unbind '%'
+bind - split-window -v
+
+set -g mouse on
+
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
