Fix location of popup script

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,4 +25,4 @@ set -g mouse on
 
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
-bind-key u run-shell 'scripts/popuptmux.sh'
+bind-key u run-shell '~/scripts/popuptmux.sh'
