Add new tmux windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,17 @@ bind - split-window -v
 
 set -g mouse on
 
+# Reload configuration
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
+# Create a new window
+bind-key n new-window
+
+# Move to last window
+bind-key l last-window
+
+# Close current window
+bind-key c kill-window
+
+# Start a terminal popup
 bind-key u run-shell '~/scripts/popuptmux.sh'
