hyprland on laptop

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -24,6 +24,9 @@ env = XCURSOR_SIZE,24
 # Setup crash reporting
 #env = HYPRLAND_TRACE,1
 
+# Detect the monitor and set the right resolution
+exec=~/.config/hypr/monitor-detect.sh
+
 # Exec Needed Apps
 exec-once=waybar
 exec-once=dunst
@@ -54,6 +57,7 @@ input {
 
     touchpad {
         natural_scroll = no
+        clickfinger_behavior = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
