--- a/config/wofi/config
+++ b/config/wofi/config
@@ -1,9 +1,8 @@
 style=$HOME/.config/wofi/style.css
-xoffset=660
-yoffset=275
 show=drun
 width=600
 height=500
+normal_window=true
 always_parse_args=true
 show_all=true
 print_command=true
