--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -118,13 +118,17 @@ master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
     bind = $mainMod SHIFT, RETURN, layoutmsg, swapwithmaster
-    mfact=0.7
+    mfact=0.5
     
     bind = $mainMod SHIFT, j, layoutmsg, swapnext
     bind = $mainMod SHIFT, k, layoutmsg, swapprev
     bind = $mainMod, j, layoutmsg, cyclenext
     bind = $mainMod, k, layoutmsg, cycleprev
-    bind = $mainMod SHIFT, l, layoutmsg, orientationcycle left center
+#    bind = $mainMod SHIFT, l, layoutmsg, orientationcycle left center
+    bind = $mainMod SHIFT, f, layoutmsg, swapwithmaster master
+    bind = $mainMod SHIFT, l, layoutmsg, mfact .7
+    workspace = 1, layoutopt:orientation:center
+    workspace = 2, layoutopt:orientation:center
 }
 
 gestures {
