updates for screen locking wayland

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -35,6 +35,9 @@ exec-once=openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=qpwgraph -a -m
 
+# make sure that systemd knows what WM is being used
+exec-once=systemctl import-environment XDG_SESSION_TYPE
+
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/bin/bash -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
 
