--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -96,7 +96,7 @@ decoration {
     drop_shadow = yes
     shadow_range = 5
     shadow_render_power = 3
-    inactive_opacity = .7  
+    inactive_opacity = .5  
     col.shadow = rgba(1a1a1aee)
 }
 
@@ -123,10 +123,11 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    always_center_master=true
     new_is_master = true
     bind = $mainMod SHIFT, RETURN, layoutmsg, swapwithmaster
     mfact=0.5
-    
+
     bind = $mainMod SHIFT, j, layoutmsg, swapnext
     bind = $mainMod SHIFT, k, layoutmsg, swapprev
     bind = $mainMod, j, layoutmsg, cyclenext
@@ -166,6 +167,11 @@ windowrulev2 = noblur,class:^(ffplay)$
 windowrulev2 = idleinhibit always, class:^(ffplay)$
 windowrulev2 = opacity 1.0 override 1.0 override, class:^(ffplay)$
 windowrulev2 = tile,class:^(ffplay)$
+
+# Do not dim twitch
+windowrulev2 = noblur,title:^(.*Twitch.*)$
+windowrulev2 = idleinhibit always,title:^(.*Twitch.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Twitch.*)$
 
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:^(firefox)$
