Updates for usability

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,6 +28,9 @@ exec=~/.config/hypr/monitor-detect.sh
 # Setup the right waybar depending on computer
 exec-once=~/.config/hypr/waybar-detect.sh
 
+# Setup udiskie to run on WM start
+exec-once=~/.config/hypr/udiskie.sh
+
 # Exec Needed Apps
 exec-once=dunst
 exec-once=solaar -w hide
@@ -132,11 +135,18 @@ master {
     bind = $mainMod SHIFT, k, layoutmsg, swapprev
     bind = $mainMod, j, layoutmsg, cyclenext
     bind = $mainMod, k, layoutmsg, cycleprev
-#    bind = $mainMod SHIFT, l, layoutmsg, orientationcycle left center
     bind = $mainMod SHIFT, f, layoutmsg, swapwithmaster master
     bind = $mainMod SHIFT, l, layoutmsg, mfact .7
+
+    # Reset the orientation when working on laptop
     workspace = 1, layoutopt:orientation:center
     workspace = 2, layoutopt:orientation:center
+
+    workspace = 1, persistent:true
+    workspace = 2, persistent:true
+    workspace = 3, persistent:true
+    workspace = 4, persistent:true
+    workspace = 5, persistent:true
 }
 
 gestures {
@@ -155,12 +165,6 @@ misc {
     mouse_move_enables_dpms=true
     key_press_enables_dpms=false # disabled for testing
 }
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Make sure FFPlay does not allow the computer to sleep
 windowrulev2 = noblur,class:^(ffplay)$
@@ -182,21 +186,10 @@ windowrulev2 = workspace 2,class:^(Alacritty)$
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod $ctrlMod, Q, exit, 
-#bind = $mainMod, E, exec, dolphin
 bind = $mainMod SHIFT, V, togglefloating, 
 bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc
-#bind = $mainMod SHIFT, P, exec, wofi --show calc --modi calc,combi
-#bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
-
-# Move workspace with ctrlMod + arrow keys
-#bindr = , Control_L, submap, prevworkspace
-#submap = prevworkspace
-#bind = , left, workspace, e-1
-#bind = , left, submap, reset
-#submap = reset
-
+# Move workspace left and right
 bind = $ctrlMod, left, workspace, e-1
 bind = $ctrlMod, right, workspace, e+1
 
@@ -205,11 +198,6 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
-#bind = $mainMod SHIFT, j, rollnext
-#bind = $mainMod SHIFT, k, rollprev
-#bind = $mainMod, j, swapnext
-#bind = $mainMod, k, swapprev
 
 # Alt Tab
 bind = ALT, tab, cyclenext
