--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -177,6 +177,11 @@ windowrulev2 = noblur,title:^(.*Twitch.*)$
 windowrulev2 = idleinhibit always,title:^(.*Twitch.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Twitch.*)$
 
+# Do not dim youtube
+windowrulev2 = noblur,title:^(.*YouTube.*)$
+windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
+
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 1,class:^(ffplay)$
