--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -32,11 +32,11 @@ exec-once=~/.config/hypr/waybar-detect.sh
 exec-once=~/.config/hypr/udiskie.sh
 
 # Exec Needed Apps
-exec-once=dunst
-exec-once=solaar -w hide
-exec-once=openrgb --startminimized -p Default
+exec-once=/usr/bin/dunst
+exec-once=/usr/bin/solaar -w hide
+exec-once=/usr/bin/openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=qpwgraph -a -m
+exec-once=/usr/bin/qpwgraph -a -m
 
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/bin/bash -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
@@ -123,10 +123,9 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    always_center_master=true
+    always_center_master = true
     new_is_master = true
-    bind = $mainMod SHIFT, RETURN, layoutmsg, swapwithmaster
-    mfact=0.5
+    mfact = 0.5
 
     bind = $mainMod SHIFT, j, layoutmsg, swapnext
     bind = $mainMod SHIFT, k, layoutmsg, swapprev
@@ -135,9 +134,6 @@ master {
     bind = $mainMod SHIFT, f, layoutmsg, swapwithmaster master
     bind = $mainMod SHIFT, l, layoutmsg, mfact .7
 
-    # Reset the orientation when working on laptop
-    workspace = 1, layoutopt:orientation:center
-    workspace = 2, layoutopt:orientation:center
 
     workspace = 1, persistent:true
     workspace = 2, persistent:true
@@ -162,6 +158,11 @@ misc {
     mouse_move_enables_dpms=true
     key_press_enables_dpms=false # disabled for testing
 }
+
+
+# Reset the orientation when working on laptop
+workspace = 1, layoutopt:orientation:center
+workspace = 2, layoutopt:orientation:center
 
 # Make sure FFPlay does not allow the computer to sleep
 windowrulev2 = noblur,class:^(ffplay)$
