--- a/config/waybar/config
+++ b/config/waybar/config
@@ -3,6 +3,9 @@
 {
 	"layer": "top",
 	"position": "bottom",
+  "margin-bottom": 8,
+  "margin-left": 8,
+  "margin-right": 8,
 
 	"modules-left": [
 		"hyprland/workspaces",
