Add an update for hyprctl

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -sa terminal-features ',xterm-256color:RGB'
 
+set-option -g update-environment "HYPRLAND_INSTANCE_SIGNATURE \
+                                  WAYLAND_DISPLAY"
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
