--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,12 +1,6 @@
-[colors.bright]
-black = "#4c566a"
-blue = "#81a1c1"
-cyan = "#8fbcbb"
-green = "#a3be8c"
-magenta = "#b48ead"
-red = "#bf616a"
-white = "#eceff4"
-yellow = "#ebcb8b"
+import = [
+  "~/.config/alacritty/nord-theme.toml"
+]
 
 [colors.cursor]
 cursor = "#d8dee9"
@@ -21,22 +15,6 @@ magenta = "#8c738c"
 red = "#94545d"
 white = "#aeb3bb"
 yellow = "#b29e75"
-
-[colors.normal]
-black = "#3b4252"
-blue = "#81a1c1"
-cyan = "#88c0d0"
-green = "#a3be8c"
-magenta = "#b48ead"
-red = "#bf616a"
-white = "#e5e9f0"
-yellow = "#ebcb8b"
-
-[colors.primary]
-background = "#2e3440"
-dim_foreground = "#a5abb6"
-foreground = "#d8dee9"
-
 
 [colors.search.matches]
 background = "#88c0d0"
@@ -94,3 +72,4 @@ mods = "Control"
 [window]
 decorations = "none"
 opacity = 0.95
+
