--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,13 +36,15 @@ exec-once=/usr/bin/dunst
 exec-once=/usr/bin/solaar -w hide
 exec-once=/usr/bin/openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=/usr/bin/qpwgraph -a -m
+exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
+exec-once=/usr/bin/firefox
+exec-once=/usr/bin/alacritty
 
 # Lock screen after idle for 300s and turn monitors off after 330
-exec-once=/bin/bash -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
+exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
 
 # Load xmodmap
-exec-once=xmodmap ~/.Xmodmap
+exec-once = xmodmap ~/.Xmodmap
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
@@ -124,7 +126,7 @@ dwindle {
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     always_center_master = true
-    new_is_master = true
+    new_status = master
     mfact = 0.5
 
     bind = $mainMod SHIFT, j, layoutmsg, swapnext
@@ -180,12 +182,34 @@ windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 1,class:^(ffplay)$
 windowrulev2 = workspace 2,class:^(Alacritty)$
 
+# Float qprompt
+windowrulev2 = workspace 1, class:^(com.cuperino.qprompt)$
+windowrulev2 = float, class:^(com.cuperino.qprompt)$
+windowrulev2 = move 1600 0, class:^(com.cuperino.qprompt)$
+windowrulev2 = size 1920 20%, class:^(com.cuperino.qprompt)$
+windowrulev2 = nodim, class:^(com.cuperino.qprompt)$
+windowrulev2 = opacity 1.0 override 1.0 override, class:^(com.cuperino.qprompt)$
+
+# Firefox PIP
+windowrulev2 = noinitialfocus, title:^(Picture\-in\-Picture)$
+windowrulev2 = idleinhibit always, title:^(Picture\-in\-Picture)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(Picture\-in\-Picture)$
+windowrulev2 = tile,title:^(Picture\-in\-Picture)$
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod SHIFT, C, killactive, 
-bind = $mainMod $ctrlMod, Q, exit, 
-bind = $mainMod SHIFT, V, togglefloating, 
+bind = $mainMod SHIFT, C, killactive
+bind = $mainMod $ctrlMod, Q, exit
+bind = $mainMod SHIFT, V, togglefloating 
 bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc
+
+# Float Firefox Window and Set size
+bind = $mainMod, o, setfloating, active
+bind = $mainMod, o, resizeactive, exact 1920 1080
+bind = $mainMod, o, moveactive, exact 1600 300
+
+# Reset Firefox window
+bind = $mainMod SHIFT, o, settiled, active 
 
 # Move workspace left and right
 bind = $ctrlMod, left, workspace, e-1
